# catalyst

./: .gitignore  catalyst_agent_docs.md  download_file_plan.md  requirements.txt
.devcontainer/: devcontainer.json
catalyst_agent/: README.md  __init__.py  pyproject.toml  setup.cfg  setup.py
catalyst_agent/catalyst_agent/: __init__.py  agent.py  config.py  event_queue.py  llm.py  llm_azure.py  llm_base.py  llm_gemini.py  requirements.txt
catalyst_agent/catalyst_agent/cli/: __init__.py  main.py
catalyst_agent/catalyst_agent/memory/: __init__.py  base.py  implementations.py  manager.py
catalyst_agent/catalyst_agent/planning/: __init__.py  base.py  engine.py
catalyst_agent/catalyst_agent/tools/: __init__.py  base.py  code_execution.py  discovery.py  download_file.py  file_reader.py  file_writer.py  image_generation.py  image_search.py  package_manager.py  web_fetch.py  web_search.py
catalyst_agent/catalyst_agent/utils/: log_utils.py  prompt_templates.py
catalyst_agent/examples/: advanced_code_execution_example.py  agent_core_codetool.py  calculator_example.py  code_execution_example.py  dynamic_code_example.py  image_generation_example.py  package_installer_example.py  test_bing_search.py  test_google_search.py  test_web_fetch.py  test_websearch.py
catalyst_web/: app.py  bitcoin_last_30_days.csv  requirements.txt
catalyst_web/config/: __init__.py
catalyst_web/routes/: api.py  auth.py  chat.py
catalyst_web/services/: chat_service.py
catalyst_web/templates/: 404.html  500.html  base.html  chat.html  index.html  login.html  profile.html  register.html
catalyst_web/utils/: __init__.py
core/: __init__.py  agent.py  config.py  llm.py
core/examples/: advanced_code_execution_example.py  agent_core_codetool.py  calculator_example.py  code_execution_example.py  dynamic_code_example.py  image_generation_example.py  news_summary.md  package_installer_example.py  test_bing_search.py  test_google_search.py  test_web_fetch.py  test_websearch.py
core/notebooks/: agentic_core_example.ipynb  code_execution_tool.ipynb  explaining_agent_behavior.ipynb
(+17 files in other folders)
