[metadata]
name = catalyst-agent
version = 0.1.0
description = Catalyst Agent - An AI agent toolkit with multiple capabilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Catalyst Team
author_email = info@catalyst-ai.org
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    ai
    agent
    llm
    ai-agent
    tools

[options]
packages = find:
python_requires = >=3.8
install_requires =
    annotated-types>=0.7.0
    anyio>=4.9.0
    beautifulsoup4>=4.13.3
    bs4>=0.0.2
    certifi>=2025.1.31
    charset-normalizer>=3.4.1
    colorama>=0.4.6
    distro>=1.9.0
    h11>=0.14.0
    html2text>=2024.2.26
    httpcore>=1.0.7
    httpx>=0.28.1
    idna>=3.10
    jiter>=0.9.0
    openai>=1.69.0
    pydantic>=2.11.1
    pydantic_core>=2.33.0
    python-dotenv>=1.1.0
    requests>=2.32.3

[options.package_data]
* = *.txt, *.md

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist